MNTP: Fixed an long-time CSS bug. Aligned the header with the right-panel.

--- a/src/umbraco.editorControls/MultiNodeTreePicker/MultiNodePickerStyles.css
+++ b/src/umbraco.editorControls/MultiNodeTreePicker/MultiNodePickerStyles.css
@@ -176,7 +176,7 @@
 }
 .multiNodePicker .header
 {
-    width: 622px;
+    width: 618px;
 }
 
 .uc-treenode-noclick > a > div
